--- a/vignettes/gtfs2emis_intro_vignette.Rmd
+++ b/vignettes/gtfs2emis_intro_vignette.Rmd
@@ -1,11 +1,10 @@
 ---
 title: 'Introduction to gtfs2emis'
-author: "Joao Bazzo, Rafael H. M. Pereira, Pedro R. Andrade"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 abstract: "`gtfs2emis` is an R package to estimate public transport emissions based on GTFS data. The package allows users to estimate the emission levels of several types of pollutants at high spatial and temporal resolutions simply using a GTFS feed and some information on fleet characteristics."
 urlcolor: blue
-vignette: |
+vignette: >
   %\VignetteIndexEntry{Introduction to gtfs2emis} 
   %\VignetteEngine{knitr::rmarkdown} 
   \usepackage[utf8]{inputenc}
@@ -120,6 +119,7 @@ The first step is to generate the transport model using the `transport_model()` 
 
 ```{r, message = FALSE}
 tp_model <- transport_model(gtfs_data = gtfs_poa, parallel = TRUE)
+
 ```
 
 Here is how the output of the transport model looks like. In essence, it's a trajectory data.table with the space-time position and speed of trips segments for each single vehicle of the public transport system.
