--- a/vignettes/gtfs2emis_fleet_data.Rmd
+++ b/vignettes/gtfs2emis_fleet_data.Rmd
@@ -90,7 +90,9 @@ fleet_data_ef_cetesb
 Based on the European Monitoring and Evaluation Programme ([EMEP](https://www.eea.europa.eu/themes/air/air-pollution-sources-1/emep-eea-air-pollutant-emission-inventory-guidebook/emep)), developed by EEA.
 
 ```{r, message = FALSE}
-fleet_data_ef_europe <- data.frame(  veh_type = c("Ubus Midi <=15 t","Ubus Std 15 - 18 t" ,"Ubus Artic >18 t")
+fleet_data_ef_europe <- data.frame(  veh_type = c("Ubus Midi <=15 t"
+                                                  ,"Ubus Std 15 - 18 t"
+                                                  ,"Ubus Artic >18 t")
                                    , euro = c("III","IV","V")
                                    , fuel = rep("D",3)
                                    , tech = c("-","SCR","SCR")
