--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 [![Lifecycle:
      experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html)
 [![Codecov test
-coverage](https://codecov.io/gh/ipeaGIT/gtfs2emis/branch/main/graph/badge.svg)](https://app.codecov.io/gh/ipeaGIT/gtfs2emis?branch=main)
+coverage](https://codecov.io/gh/ipeaGIT/gtfs2emis/branch/master/graph/badge.svg)](https://app.codecov.io/gh/ipeaGIT/gtfs2emis?branch=master)
 
 **gtfs2emis** is an R package to estimate the emission levels of public
 transport vehicles based on General Transit Feed Specification (GTFS) data. The package requires two main inputs: i) public transport data in GTFS standard format; and ii) some basic information on fleet characteristics such as vehicle age, technology, fuel and Euro stage. As it
@@ -154,7 +154,7 @@ Check out the guides for learning everything there is to know about all the diff
 
  - [Getting started](https://ipeagit.github.io/gtfs2emis/articles/gtfs2emis_intro_vignette.html)
  - [Defining Fleet data](https://ipeagit.github.io/gtfs2emis/articles/gtfs2emis_fleet_data.html)
- - [Exploring Emission Factors](ttps://ipeagit.github.io/gtfs2emis/articles/gtfs2emis_emission_factor.html)
+ - [Exploring Emission Factors](https://ipeagit.github.io/gtfs2emis/articles/gtfs2emis_emission_factor.html)
 
 
 ### **Related packages**
